--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,13 @@ body {
     height: 100%;
     margin: 0;
     position: relative;
+    background-color: #212124;
+   /* background: url("assets/images/wave-background.svg") no-repeat fixed center;
+    background-size: cover;*/
 }
 .box-container{
     width: 470px;
-    height: 700px;
-    border: 1px solid black;
-
+    height: 750px;
     position: relative;
     top: 50px;
     bottom: 0;
@@ -16,25 +17,50 @@ body {
     margin: auto;
 
     padding: 20px;
+
+    border-radius: 50px;
+    background: #212124;
+    box-shadow: inset 10px 10px 20px #121214,
+    inset -10px -10px 20px #303034;
+}
+#answer-div{
+    width: 90%;
+    height: auto;
+    text-align: right;
+    padding: 15px;
+    color: white;
+    font-size: 30px;
+}
+.colOperators{
+    background-color: #FF9500;
+    color: white;
+}
+.col{
+    background-color: #D4D4D2;
 }
 button {
     width: 100px;
     aspect-ratio: 1/1;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 50%;
     font-size: 1.5em;
     cursor: pointer;
     margin: 5px;
 }
-button:hover {
+.colOperators:hover {
+    background-color: #FFD52E;
+}
+.col:hover{
     background-color: #f0f0f0;
+}
+footer{
+    color: #95a5a6;
+    text-align: center;
+    position: relative;
 }
 @media (max-width: 600px) {
     .box-container{
         width: 400px;
         height: 700px;
-        border: 1px solid black;
     }
     button {
         width: 80px;
